data/derived/comb/progs/unify/prog2248.ml.out
Characters 20-83:
  let _ =List.combine ((clone 7 7),(List.combine ([0;0;0;1;0;0;2],[0;0;0;1;0;0;2])) );;
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list
